<resources>
    <string name="app_name">What the dog doin</string>
    <string name="dogs">Chiens</string>
    <string name="breeds">Races</string>
    <string name="home">Accueil</string>
    <string name="diseases">Maladies</string>
    <string name="clients">Clients</string>
    <string name="categories">Categories</string>
    <string name="register">Enregistrer</string>
    <string name="master">Maître</string>

    <string-array name="dogs_sort">
        <item>Ordre alphabétique</item>
        <item>Age</item>
        <item>Poids</item>
    </string-array>

    <string-array name="breeds_sort">
        <item>Nom</item>
        <item>Catégorie</item>
        <item>Morphologie</item>
        <item>Taille moyenne</item>
    </string-array>

    <string-array name="category_sort">
        <item>Ordre alphabétique</item>
        <item>Taille moyenne</item>
        <item>Nombre de chiens</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_by">Trier par</string>
    <string name="button_add_a_category">Button add a category</string>
    <string name="categoryName">Nom de la catégorie</string>
</resources>