<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_categories">

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.whatthedogdoin.ui.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_dogs"
        android:name="com.example.whatthedogdoin.ui.dogs.DogsFragment"
        android:label="@string/dogs"
        tools:layout="@layout/fragment_dogs" />

    <fragment
        android:id="@+id/navigation_breeds"
        android:name="com.example.whatthedogdoin.ui.breeds.BreedsFragment"
        android:label="@string/breeds"
        tools:layout="@layout/fragment_breeds" />
    <fragment
        android:id="@+id/navigation_diseases"
        android:name="com.example.whatthedogdoin.ui.diseases.DiseasesFragment"
        android:label="@string/diseases"
        tools:layout="@layout/fragment_diseases" />
    <fragment
        android:id="@+id/navigation_clients"
        android:name="com.example.whatthedogdoin.ui.clients.ClientsFragment"
        android:label="@string/clients"
        tools:layout="@layout/fragment_clients" />

</navigation>